gccida/c2/record_jump_cond
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4958:25: error: must use 'enum' tag to refer to type 'rtx_code'
void  record_jump_cond( rtx_code code, machine_mode mode, rtx op0, rtx op1, int reversed_nonequality) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4958:40: error: must use 'enum' tag to refer to type 'machine_mode'
void  record_jump_cond( rtx_code code, machine_mode mode, rtx op0, rtx op1, int reversed_nonequality) 
                                       ^
                                       enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4960:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4968:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4968:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4969:4: error: expected ';' after expression
rtx v16; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4969:5: error: use of undeclared identifier 'v16'
rtx v16; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4970:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4975:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4976:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4976:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4977:4: error: expected ';' after expression
rtx v24; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4977:5: error: use of undeclared identifier 'v24'
rtx v24; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4979:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v26; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4980:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4986:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4986:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4987:4: error: expected ';' after expression
rtx v34; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/cse.c:4987:5: error: use of undeclared identifier 'v34'
rtx v34; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_jump_cond/src/obj/cse.o] Error 1
